replace shape file with another one only containing the inner city area and remodel simple example